fixing images not showing up on github hosted page

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,7 +1,7 @@
 //navigation bar
 .navbar {
   padding-bottom: 10px;
-  background-image: url(/images/footer-img.jpg);
+  background-image: url(./images/footer-img.jpg);
 }
 
 .navbar-brand {
@@ -39,7 +39,7 @@
 // title section
 .title-header {
   height: 879.3px;
-  background-image: url(/images/home-jumbo2.jpg);
+  background-image: url(./images/home-jumbo2.jpg);
   background-size: cover;
   box-shadow: 0 3000px rgba(0, 0, 0, 0.4) inset;
   color: white;
@@ -205,7 +205,7 @@
 // Mission Section 
 .mission-jumbo {
   height: 683.9px;
-  background-image: url(/images/Mission-Jumbo.jpg);
+  background-image: url(./images/Mission-Jumbo.jpg);
   background-size: cover;
   box-shadow: 0 3000px rgba(0, 0, 0, 0.4) inset;
   color: white;
@@ -238,7 +238,7 @@
   padding-top: 30px;
   text-align: center;
   height: 195.4px;
-  background-image: url(/images/footer-img.jpg);
+  background-image: url(./images/footer-img.jpg);
   color: white;
   background-color: #0d0d0d;
 
