--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -1,6 +1,6 @@
 .navbar {
   padding-bottom: 10px;
-  background-image: url(/images/footer-img.jpg);
+  background-image: url(./images/footer-img.jpg);
 }
 
 .navbar-brand {
@@ -71,7 +71,7 @@
 }
 
 .pricing .card-header {
-  background-image: url(/images/footer-img.jpg);
+  background-image: url(./images/footer-img.jpg);
   color: white;
 }
 
@@ -97,7 +97,7 @@
 .CTA-jumbo {
   color: white;
   height: 683.9px;
-  background-image: url(/images/ctajumbo.jpg);
+  background-image: url(./images/ctajumbo.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -115,7 +115,7 @@
   padding-top: 30px;
   text-align: center;
   height: 195.4px;
-  background-image: url(/images/footer-img.jpg);
+  background-image: url(./images/footer-img.jpg);
   color: white;
   background-color: #0d0d0d;
 }
